[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/ThreatBanner.gd" id="1"]

[node name="ThreatBanner" type="Control"]
anchors_preset = 10
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -240.0
offset_top = 24.0
offset_right = 240.0
offset_bottom = 180.0
pivot_offset = Vector2(240, 0)
visible = false
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="Layout" type="VBoxContainer" parent="Panel"]
layout_mode = 2
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12

[node name="Name" type="Label" parent="Panel/Layout"]
layout_mode = 2
size_flags_horizontal = 3
text = "Threat Incoming"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stats" type="HBoxContainer" parent="Panel/Layout"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
custom_constants/separation = 16

[node name="PowerLabel" type="Label" parent="Panel/Layout/Stats"]
layout_mode = 2
text = "Power"
vertical_alignment = 1

[node name="PowerValue" type="Label" parent="Panel/Layout/Stats"]
layout_mode = 2
text = "-"
vertical_alignment = 1
size_flags_horizontal = 1

[node name="TimerLabel" type="Label" parent="Panel/Layout/Stats"]
layout_mode = 2
text = "Time"
vertical_alignment = 1

[node name="TimerValue" type="Label" parent="Panel/Layout/Stats"]
layout_mode = 2
text = "--"
vertical_alignment = 1
size_flags_horizontal = 1

[node name="Progress" type="ProgressBar" parent="Panel/Layout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
visible = false
show_percentage = false
max_value = 60.0
step = 0.01

[node name="Result" type="Label" parent="Panel/Layout"]
layout_mode = 2
size_flags_horizontal = 3
text = ""
visible = false
horizontal_alignment = 1
vertical_alignment = 1

*** End File
